# typeforge

./: .gitignore  Makefile.am  README.md  TODO.md  build  configure.ac
config/: rose-compiler.m4
docs/: Makefile.am  typeforge.bib  typeforge.tex
include/Typeforge/: Analysis.hpp  CastStats.hpp  CommandList.hpp  CppStdUtilities.hpp  Makefile.am  SpecFrontEnd.hpp  TFTransformation.hpp  TFTypeTransformer.hpp  ToolConfig.hpp  TypeforgeException.hpp  commons.hpp
include/Typeforge/OpNet/: CollapseRules.hpp  OperandData.hpp  OperandNetwork.hpp  TypeChain.hpp  commons.hpp
lib/: Analysis.cpp  CastStats.cpp  CommandLineOptions.cpp  CommandList.cpp  CppStdUtilities.cpp  Makefile.am  SpecFrontEnd.cpp  TFTransformation.cpp  TFTypeTransformer.cpp  ToolConfig.cpp  commons.cpp
lib/OpNet/: CollapseRules.cpp  Makefile.am  OperandData.cpp  OperandNetwork.cpp  TypeChain.cpp  commons.cpp
src/: CommandLineOptions.cpp  CommandLineOptions.hpp  Makefile.am  typeforge.cpp
tests/: Makefile.am  adapt.json
