
SUBDIRS=OpNet

Typeforge_includedir=$(prefix)/include/Typeforge

Typeforge_include_HEADERS= \
  Analysis.hpp \
  CastStats.hpp \
  CommandList.hpp \
  CppStdUtilities.hpp \
  SpecFrontEnd.hpp \
  TFTransformation.hpp \
  TFTypeTransformer.hpp \
  ToolConfig.hpp \
  TypeforgeException.hpp \
  commons.hpp
